# hack-ml

./: .gitignore  README.md  ml.Terminology.md  ml.tools.md
books/: Learning LangChain.ipynb  book.AI Engineering.md  book.Artificial Intelligence.md  book.Build a Large Language Model From Scratch.md  book.Building Knowledge Graphs.md  langchain_runs.sh  (+9 more)
codes/hack-llm/: README.md  huggingface.ipynb  main.py  pyproject.toml  pytorch.ipynb
codes/hack-llm/app/constants/: models.py
codes/hack-llm/app/gradio/: app_gradio.py
codes/hack-llm/app/langchain/: app_langchain.py  app_langchain_agent.py  app_langchain_building_llm.py  app_langchain_deploy.py  app_langchain_fundamentals_ollama.py  app_langchain_patterns.py  app_langchain_rag_chatting_data.py  app_langchain_rag_indexing_data.py  app_langchain_testing.py  app_langgraph.py
codes/hack-llm/app/mcp/: app_mcp.py
codes/hack-llm/app/smolagents/: app_smolagents.py
codes/hack-llm/app_langgraph/: Makefile  README.md  pyproject.toml
codes/hack-llm/app_langgraph/src/agent/: graph.py
codes/hack-llm/app_langgraph_agent/: Makefile  README.md  pyproject.toml
codes/hack-llm/app_langgraph_agent/src/simple_agent/: graph.py
codes/hack-llm/app_langgraph_deep_agent/: .gitignore  Makefile  README.md  pyproject.toml
codes/hack-llm/app_langgraph_deep_agent/src/deep_agent/: graph.py
codes/nlp/hack-spacy/: README.md  app_ner.py  app_qa.py  app_token.py  config_transformer.cfg  config_without_transformer.cfg  main.py  pyproject.toml  spacy-101.ipynb  spacy_llm_ollama.py
codes/nlp/hack-spacy/app/: data.py
codes/nlp/hack-spacy/app/fastapi/: app_fastapi.py
codes/nlp/hack-spacy/app/streamlit/: app_streamlit.py
codes/nlp/hack-spacy/config/: llm-config.cfg  nel_taylor.cfg  ner_combined.cfg
codes/nlp/hack-spacy/custom/: nel_taylor_custom_functions.py
(+43 files in other folders)
