[project]
name = "hack-spacy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "ipywidgets>=8.1.8",
    "jieba>=0.42.1",
    "jupyter>=1.1.1",
    "langchain-ollama",
    "matplotlib>=3.10.9",
    "nertk>=0.0.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pip>=26.1.1",
    "spacy-llm[langchain]>=0.7.4",
    "spacy-pkuseg>=1.0.1",
    "spacy-streamlit>=1.0.6",
    "spacy[lookups,transformers]>=3.8.14",
    "srsly>=2.5.3",
]
